2023.4.7 增加程序退出时的清理函数
