# internal/controller/admin.go
@@ -1,0 +1,54 @@
+package controller
+
+import (
+	"encoding/json"
+	"fmt"
+	"gateway/internal/common"
+	"gateway/internal/dto"
+	"gateway/pkg/logger"
+	"gateway/pkg/middleware"
+
+	"github.com/gin-gonic/contrib/sessions"
+	"github.com/gin-gonic/gin"
+)
+
+type AdminController struct{}
+
+func AdminRegister(group *gin.RouterGroup) {
+	adminInfo := &AdminController{}
+	group.GET("/admin_info", adminInfo.AdminInfo)
+}
+
+// AdminInfo godoc
+// @Summary 管理员信息
+// @Description 管理员信息
+// @Tags 管理员接口
+// @ID /admin/admin_info
+// @Accept  json
+// @Produce  json
+// @Success 200 {object} middleware.Response{data=dto.AminInfoOutput} "success"
+// @Router /admin/admin_info [get]
+func (adminInfo *AdminController) AdminInfo(c *gin.Context) {
+	// 读取seesionKey对应的json字符串转化为结构体
+	// 取出数据 封装输出
+	sess := sessions.Default(c)
+	sessInfo := sess.Get(common.AdminSessionInfoKey)
+	adminSessionInfo := &dto.AdminSessionInfo{}
+	if err := json.Unmarshal([]byte(fmt.Sprint(sessInfo)), adminSessionInfo); err != nil {
+		logger.ErrorWithTraceID(c, "session反序列化失败")
+		middleware.ResponseError(c, 2000, err)
+	}
+
+	out := &dto.AminInfoOutput{
+		ID:            adminSessionInfo.ID,
+		Name:          adminSessionInfo.UserName,
+		LoginTime:     adminSessionInfo.LoginTime,
+		Avatar:        "https://gw.alipayobjects.com/zos/rmsportal/BiazfanxmamNRoxxVxka.png",
+		Introduceions: "I am a super administrator",
+		Roles: []string{
+			"admin",
+		},
+	}
+	middleware.ResponseSuccess(c, out)
+	logger.InfoWithTraceID(c, "登录成功")
+}
